duihome (0.20.2~1) unstable; urgency=low

  * New version [UNRELEASED]

 -- Vesa Halttunen <vesa.halttunen@nokia.com>  Tue, 23 Mar 2010 18:40:53 +0200

duihome (0.20.1-1) unstable; urgency=low

  * Use the correct icon ID for the launcher button

 -- Vesa Halttunen <vesa.halttunen@nokia.com>  Tue, 23 Mar 2010 16:32:30 +0200

duihome (0.20.0-1) unstable; urgency=low

  * New version
  * Implemented: SWP#DUI-1949 Launcher layout & navigation
  * Implemented: SWP#DUI-1944 Notification plugin in Status Indicator Menu

 -- Vesa Halttunen <vesa.halttunen@nokia.com>  Tue, 23 Mar 2010 15:27:36 +0200

duihome (0.19.3-1) unstable; urgency=low

  * New version
  * Implemented: SWP#DUI-2397 Quick Launch Bar

 -- Vesa Halttunen <vesa.halttunen@nokia.com>  Tue, 16 Mar 2010 11:53:55 +0200

duihome (0.19.2-1) unstable; urgency=low

  * New version
  * Implemented: SWP#DUI-2011 Switcher overview

 -- Vesa Halttunen <vesa.halttunen@nokia.com>  Tue,  2 Mar 2010 13:01:35 +0200

duihome (0.19.1-1) unstable; urgency=low

  * New version
  * Fixes: Installed applications were not shown in the Launcher when compiled with testability enabled

 -- Vesa Halttunen <vesa.halttunen@nokia.com>  Thu, 25 Feb 2010 14:24:01 +0200

duihome (0.19.0-1) unstable; urgency=low

  * New version
  * Implemented: SWP#DUI-1946 Status bar for applications
  * Implemented: SWP#DUI-1947 Implement status bar layout
  * Implemented: SWP#DUI-1972 Show operator name in home view
  * Implemented: SWP#DUI-1988 Means to close windows from switcher
  * Implemented: SWP#DUI-2006 Immediate feedback of launching application from launcher
  * Implemented: SWP#DUI-1867 Ability to specify absolute path to image in notification
  * Fixes: NB#153329 - X applications icons are not shown after minimization
  * Fixes: NB#153350 - duihome does not provide feedback for application startup
  * Fixes: NB#155106 - "App Matrix" maintains landscape layout unless rotated intentionally