@@ -1,6 +1,7 @@
 duihome (0.20.2~1) unstable; urgency=low
 
   * New version [UNRELEASED]
+  * Close the launcher when a launcher button is clicked
 
  -- Vesa Halttunen <vesa.halttunen@nokia.com>  Tue, 23 Mar 2010 18:40:53 +0200
 
